--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
     integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
     crossorigin=""/>
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.css">
     <link rel="stylesheet" href="src/css/header.css">
     <link rel="stylesheet" href="src/css/featuredWorks.css">
     <link rel="stylesheet" href="src/css/smallTeam.css">
@@ -30,11 +31,11 @@
     <header class="header grey lighten-3">
             <img class = "header__logo" src="./src/images/logo.png" alt="#">
             <p class="header__text">
-                SAY HELLO TO SHOPNO!<br/>
-                AGENCY CORPORATE SHOPNO THEME
+                SAY HELLO TO <span class="header__text-mark">SHOPNO!<br/>
+                AGENCY</span> CORPORATE SHOPNO THEME
             </p>
             <div class="header__btn-wrapper">
-                <a class="header__btn"><img class="header__btn-img" src="src/images/contactUs.png"></a>
+                <a class="header__btn grey lighten-3"><span class="header__btn-text">CONTACT US</span></a>
             </div>
             <div class="header__img-wrapper">
                 <img class="header__img" src="./src/images/juice.png">
@@ -124,8 +125,8 @@
                 <p> Phone: +548 945645 </p>
                 <p> Fax: +456456 54546 </p>
                 <br/>
-                <p> Web: www.designagency.net </p>
-                <p> E-mail: info@designagency.net </p>
+                <p><a href="#"> Web: www.designagency.net </a></p>
+                <p><a href="#"> E-mail: info@designagency.net </a></p>
             </div>        
         <div id="map" class="map"></div>     
         </div> 
@@ -134,6 +135,10 @@
     <footer>
         <p class="footer_text">FOLLOW US</З>
         <div class="footer_icon-container">
+            <button type="button" class="footer__btn btn-social-icon btn-outline-pinterest"><i class="fa fa-pinterest"></i></button>
+            <button type="button" class="footer__btn btn-social-icon btn-outline-facebook"><i class="fa fa-facebook"></i></button>
+	        <button type="button" class="footer__btn btn-social-icon btn-outline-twitter"><i class="fa fa-twitter"></i></button>
+	        <button type="button" class="footer__btn btn-social-icon btn-outline-dribbble"><i class="fa fa-dribbble"></i></button>
         </div>
     </footer>
     
