render small team done

--- a/index.html
+++ b/index.html
@@ -89,15 +89,9 @@
                 <p class="small-team__text small-team__text-merriweather">LOREM IPSUM DOLOR SIT AMET EVENT LANDING TEMPLATE</p>
             </div>  
         </div>
-        <!--БУДЕТ ПЕРЕДЕЛАНО ПОД uL LI-->
-        <div class = "small-team__container-img">
-            <img class="small-team-img-1  popup-small-team-img team-img" src="src/images/team.png" data-name="Ira Doo">
-            <img class="small-team-img-2  popup-small-team-img team-img" src="src/images/team4.png"data-name="Jim Key">
-            <img class="small-team-img-3  popup-small-team-img team-img" src="src/images/team1.png"data-name="Mel Cu">
-            <img class="small-team-img-4  popup-small-team-img team-img" src="src/images/team3.png"data-name="Jorsh Min">
-            <img class="small-team-img-5  popup-small-team-img team-img" src="src/images/team2.png"data-name="Greens Pi">
-            <img class="small-team-img-6  popup-small-team-img team-img" src="src/images/team_3 copy.png" data-name="Ira Doo">
-        </div>
+        <ul class="small-team_content test">
+
+        </ul>
     </section>
 
     <section class="contacts">
@@ -147,6 +141,7 @@
     <script type="module" src="src/js/renderCommentBubble.js"></script>
     <script type="module" src="src/js/map.js"></script>
     <script type="module" src="src/js/btnGoToContacts.js"></script>
+    <script type="module" src="src/js/renderSmallTeam.js"></script>
         <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
         integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
         crossorigin=""></script>
